--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document</title>    
 </head>
 <body>
-    <button onclick="alert('Hola!')">Saludar</button>
+    <div style="padding: 5px; background-color: green;"  id="container">
+        <button onclick="alert('Hola!')">Saludar</button>
+    </div>
+    <script src="eventos.js"></script>
 </body>
 </html>
