--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <div style="padding: 5px; background-color: green;"  id="container">
-        <button onclick="alert('Hola!')">Saludar</button>
+        <button id="btnSaludar">Saludar</button>
     </div>
     <script src="eventos.js"></script>
 </body>
-</html>
+</html> 
